# game_of_life

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
game_of_life/: __init__.py  __main__.py  app.py  cell.py  gui.py  gui_elements.py  processing.py  processor.py
game_of_life/config/: config.ini  default.ini
tests/: test_game_of_life.py
