[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = "Python implementation of Conway's Game of Life using NumPy and Tkinter."
authors = ["Martin Kuchynka <kuchynkm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.20"
Pillow = "^8.3.2"
scipy = "~1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
loguru = "^0.5.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
