[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = "Python implementation of Conway's Game of Life using NumPy and Tkinter."
authors = ["Martin Kuchynka <kuchynkm@gmail.com>"]
repository = "https://github.com/kuchynkm/game_of_life"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.5"
Pillow = "^8.3.2"
scipy = "^1.8.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
